<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/about"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/ic_launcher2_round"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/adobe_gothic_bold"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/news_reader"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Version"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_marginTop="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designed_by"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gagan"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_power" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_grey_700"
            android:textSize="20sp"
            android:text="@string/powered_by"
            />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_grey_700"
            android:textSize="24sp"
            android:text="@string/newsapi"

            />

    </LinearLayout>

    </LinearLayout>

</LinearLayout>

